improved object.js function to change the text when copy and modified classes to button divs to make it fixed when the page collapse

--- a/lightcurve/src/object_api/static/object.css
+++ b/lightcurve/src/object_api/static/object.css
@@ -217,6 +217,14 @@
   margin-top: 30px;
 }
 
+.tw-preflight .tw-mr-\[5px\] {
+  margin-right: 5px;
+}
+
+.tw-preflight .tw-box-border {
+  box-sizing: border-box;
+}
+
 .tw-preflight .tw-box-content {
   box-sizing: content-box;
 }
@@ -293,6 +301,10 @@
   width: 33.333333%;
 }
 
+.tw-preflight .tw-w-1\/6 {
+  width: 16.666667%;
+}
+
 .tw-preflight .tw-w-12 {
   width: 3rem;
 }
@@ -337,16 +349,8 @@
   width: 66.666667%;
 }
 
-.tw-preflight .tw-w-1\/4 {
-  width: 25%;
-}
-
-.tw-preflight .tw-w-1\/5 {
-  width: 20%;
-}
-
-.tw-preflight .tw-w-1\/6 {
-  width: 16.666667%;
+.tw-preflight .tw-w-2\/5 {
+  width: 40%;
 }
 
 .tw-preflight .tw-min-w-full {
@@ -355,6 +359,14 @@
 
 .tw-preflight .tw-max-w-\[40\%\] {
   max-width: 40%;
+}
+
+.tw-preflight .tw-flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+.tw-preflight .tw-flex-grow {
+  flex-grow: 1;
 }
 
 .tw-preflight .-tw-translate-y-1 {
@@ -399,8 +411,16 @@
   grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 
+.tw-preflight .tw-flex-row {
+  flex-direction: row;
+}
+
 .tw-preflight .tw-flex-col {
   flex-direction: column;
+}
+
+.tw-preflight .tw-flex-wrap {
+  flex-wrap: wrap;
 }
 
 .tw-preflight .tw-place-content-center {
@@ -419,6 +439,10 @@
   align-items: center;
 }
 
+.tw-preflight .tw-justify-start {
+  justify-content: flex-start;
+}
+
 .tw-preflight .tw-justify-end {
   justify-content: flex-end;
 }
@@ -433,6 +457,10 @@
 
 .tw-preflight .tw-gap-1 {
   gap: 0.25rem;
+}
+
+.tw-preflight .tw-gap-2 {
+  gap: 0.5rem;
 }
 
 .tw-preflight :is(.tw-space-x-2 > :not([hidden]) ~ :not([hidden])) {
@@ -451,12 +479,6 @@
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
-.tw-preflight :is(.tw-space-x-1 > :not([hidden]) ~ :not([hidden])) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .tw-preflight :is(.tw-divide-y > :not([hidden]) ~ :not([hidden])) {
@@ -571,6 +593,11 @@
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.tw-preflight .tw-border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+
 .tw-preflight .tw-border-b-black {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
@@ -616,11 +643,6 @@
 .tw-preflight .tw-bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
-.tw-preflight .tw-bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .tw-preflight .tw-bg-transparent {
@@ -681,14 +703,6 @@
   padding-top: 25px;
 }
 
-.tw-preflight .tw-pl-4 {
-  padding-left: 1rem;
-}
-
-.tw-preflight .tw-pl-1 {
-  padding-left: 0.25rem;
-}
-
 .tw-preflight .tw-text-left {
   text-align: left;
 }
@@ -747,11 +761,6 @@
 .tw-preflight .tw-text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.tw-preflight .tw-text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
 .tw-preflight .tw-text-blue-600 {
